# SOPilot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_prompt_system.py
backend/: requirements.txt  test.json  test_run.json  uvicorn.dev.sh
backend/src/app/: asgi.py  main.py
backend/src/app/api/v1/: __init__.py  kg.py  prompts.py  rag.py  router.py  runs.py  workflows.py
backend/src/app/core/: __init__.py  concurrency.py  lifecycle.py  logging.py  progress_manager.py  settings.py
backend/src/app/domain/: __init__.py
backend/src/app/domain/agents/: __init__.py  kg_builder.py  planner.py  qa_generator.py  researcher.py  validator.py  writer.py
backend/src/app/services/: config_service.py  kg_service.py  llm_service.py  migration_service.py  prompt_service.py  rag_service.py  workflow_service.py
docs/: DEVELOPMENT_PROGRESS.md  FRONTEND_DEVELOPER_RECRUITMENT.md  IMPROOVE_GUIDE.md  PROJECT_CURRENT_STATE.md  项目架构文档.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.js.timestamp-1756448599579-9fd9a27503a99.mjs
frontend/src/: App.vue  app.css  main.js  main.ts
frontend/src/components/: KgGraph.vue  KgGraph.vue.js  RunConsole.vue  RunConsole.vue.js
frontend/src/router/: index.js  index.ts
frontend/src/services/: api.js  api.ts
frontend/src/store/: runs.js  runs.ts
frontend/src/views/: Home.vue  Home.vue.js  PromptStudio.vue  RunDetail.vue  RunDetail.vue.js
knowledge_base/chunks/: .gitkeep
knowledge_base/snapshots/: .gitkeep
scripts/: dev.ps1
(+75 files in other folders)
