[project]
name = "agent-edu-forge"
version = "0.1.0"
description = "多Agent教材生成系统"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "networkx>=3.0",
    "matplotlib>=3.5",
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0"
]
